welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:3: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
  if(a+b=10){
      ^blueTicket:6: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
  if(b+c=10){
      ^blueTicket:9: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
  if (a+c=10){
       ^blueTicket:9: error: type mismatch;
 found   : Unit
 required: Int
  if (a+c=10){
  ^